update boton regresar, buscador de 3, etc
Actualización de botón regresar, Buscador de 3, parámetros iconos de ver registros, botón de eliminar, iconos de biometricos para inquilinos, trabajadores y visitantes

--- a/Interfaz/Administrador/src/views/administradores/principal.hbs
+++ b/Interfaz/Administrador/src/views/administradores/principal.hbs
@@ -45,8 +45,7 @@
                     <a class="waves-effect waves-light text-white btn bg-success p-2 text-center " 
                         href="/inquilinos/inquilinos_inicial_copy" style="border-radius: 20px;"
                     >
-                        Ver registros
-                        <i class="material-icons text-white center">view_list</i>
+                        Ver registros <i class="material-icons  text-white btn bg-success p-2 text-center">view_list</i>
                     </a>
                 </div>
             </div>
@@ -59,12 +58,16 @@
                     <p class="textHeight">Aquí puedes consultar la 
                         <br>información básica de todos los visitantes, agregar nuevos y/o editarlos...
                     </p>
-                    <a class="waves-effect waves-light text-white btn bg-danger p-2 text-center " 
-                        href="/visitantes/visitantes_inicial" style="border-radius: 20px;"
-                    >
+                    <!--div class="container waves-effect waves-light text-white btn bg-danger  text-center  " style="border-radius: 20px;"-->
+                        
+                        <a class="waves-effect waves-light text-white btn bg-danger p-2 text-center "  style="border-radius: 20px;"
+                        href="/visitantes/visitantes_inicial" 
+                        >
                         Ver registros
-                        <i class="material-icons text-white rounded-circlet">list</i>
-                    </a>
+                        <i class="material-icons text-white rounded-circlet text-white btn bg-danger p-2 text-center  ">list</i>
+                        </a>
+                    <!--/div-->
+                    
                 </div>
             </div>
             <div class="col s12 m6 l6 xl6">
@@ -78,7 +81,7 @@
                         href="/trabajadores/trabajadores_inicial" style="border-radius: 20px;"
                     >
                         Ver registros
-                        <i class="material-icons  text-white large rounded-circle">fact_check
+                        <i class="material-icons  text-white large rounded-circle btn bg-warning p-2 text-center ">fact_check
                         </i>
                     </a>
                 </div>
@@ -88,8 +91,8 @@
                         <h5 class="text-black" style="font-family: 'Franklin Gothic Medium'" >
                             <b>Cerrar sesion</b>
                         </h5>
-                        <a class="waves-effect waves-light text-dark btn p-2 text-center" style="background:rgb(255, 255, 0)" 
-                            href="/administradores/logout" style="border-radius: 20px;"
+                        <a class="waves-effect waves-light text-dark btn p-2 text-center" style="background:rgb(255, 255, 0);border-radius: 20px;" 
+                            href="/administradores/logout" style=""
                         >
                             <i class="material-icons  text-dark large rounded-circle">logout
                             </i>
