--- a/Interfaz/Administrador/src/views/inquilinos/inquilinos_inicial_copy.hbs
+++ b/Interfaz/Administrador/src/views/inquilinos/inquilinos_inicial_copy.hbs
@@ -26,6 +26,16 @@
             <img class="d-block w-100" src="/img/upiita-logo.png" alt="First slide" height="200px" width="150px" >
         </div>    
     </div>
+    <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
 <div class="row" style=" border: 0.0px solid rgb(220, 220, 200); margin: 25px 0px;" > 
     <div class="col s12 m6 l6 xl6">
         <div class="MenuActionContainer text-center bg-info p-2 " style="--bs-bg-opacity: .8;">
@@ -35,11 +45,11 @@
                 <b>Inquilinos</b>
             </h5>
             <p class="textHeight">Aquí puedes consultar el historial de todos los registros de inquilinos, agregar nuevos y darle seguimiento...</p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(6, 127, 202);" 
-                href="/inquilinos/all-inquilinos" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(6, 127, 202);border-radius: 20px;" 
+                href="/inquilinos/all-inquilinos" style=""
             >
                 Ver registros
-                <i class="material-icons text-white center">view_list</i>
+                <i class="material-icons text-white btn p-2 text-center">view_list</i>
             </a>
         </div>
     </div>
@@ -53,11 +63,11 @@
             <p class="textHeight">Aquí puedes añadir la 
             <br>información básica del inquilino nuevo, así como los datos biométricos... 
             </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(6, 127, 202);"
-                href="/inquilinos/add" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(6, 127, 202);border-radius: 20px;"
+                href="/inquilinos/add" style=""
             >
                 Añadir
-                <i class="material-icons text-white rounded-circlet">add</i>
+                <i class="material-icons text-white rounded-circlet btn p-2 text-center ">add</i>
             </a>
         </div>
     </div>
@@ -69,11 +79,11 @@
                 <b>Buscar Inquilino</b>
            </h5>
             <p class="textHeight">Aquí puedes buscar un inquilino y ver su información.</p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(6, 127, 202);"
-                href="/inquilinos/search-inquilinos" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(6, 127, 202);border-radius: 20px;"
+                href="/inquilinos/search-inquilinos" style=""
             >
                 Buscar
-                <i class="material-icons  text-white large rounded-circle">person_search
+                <i class="material-icons  text-white large rounded-circle btn p-2 text-center">person_search
                 </i>                    
             </a>
         </div>
@@ -86,13 +96,12 @@
                 <b>Generar informe de inquilinos</b>
             </h5>
             <p class="textHeight">Aquí puedes generar un informe con la información publica de los inquilinos </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(6, 127, 202);"
-                    href="#" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(6, 127, 202);border-radius: 20px;"
+                    href="#" style=""
                 >
                     Informe
                     <!--<i class="material-icons  text-white large rounded-circle">demography</i>-->
-                    
-                    <span class="material-symbols-sharp">
+                    <span class="material-symbols-sharp text-white  btn p-2 text-center ">
                     demography
                     </span>
             </a>
@@ -102,6 +111,8 @@
             </form-->
         </div>
     </div>
+    
+    
     </div>
     <img src="/img/ellipse11.png" alt="" 
         style="position: absolute; width: 1616px; height: 1148px; left: 100px; bottom: -900px; z-index: -1;"
