--- a/Interfaz/Administrador/src/views/partials/navigation_copy.hbs
+++ b/Interfaz/Administrador/src/views/partials/navigation_copy.hbs
@@ -32,11 +32,11 @@
                 <a class="dropdown-item" href="/administradores/principal">
                 <span class="material-icons me-1"></span>Volver al menu principal
                 </a>
-                <a class="dropdown-item" href="/administradores/perfil">ver perfil
-                <i class="large material-icons">settings</i>
+                <a class="dropdown-item" href="/administradores/perfil">Ver perfil
+                <i class="large material-icons">manage_accounts</i>
                 </a>
-                <a class="dropdown-item" href="/administradores/administradores">ver administradores
-                <i class="large material-icons">settings</i>
+                <a class="dropdown-item" href="/administradores/administradores">Ver administradores
+                <i class="large material-icons">supervisor_account</i>
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/administradores/logout">Salir
