--- a/Interfaz/Administrador/src/views/trabajadores/trabajadores_inicial.hbs
+++ b/Interfaz/Administrador/src/views/trabajadores/trabajadores_inicial.hbs
@@ -27,7 +27,16 @@
         </div>    
     </div>
     <br>
-    <br>
+    <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
 <div class="row" style=" border: 0.0px solid rgb(220, 220, 200); margin: 50px 0px;" > 
     <div class="col s12 m6 l6 xl6">
         <div class="MenuActionContainer text-center bg-warning p-2" style="--bs-bg-opacity: .7;">
@@ -36,11 +45,11 @@
                 <b>Trabajadores</b>
             </h5>
             <p class="textHeight">Aquí puedes consultar el historial de todos los registros de trabajadores, agregar nuevos y darle seguimiento...</p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(244, 161, 37);" 
-                href="/trabajadores" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(244, 161, 37);border-radius: 20px;" 
+                href="/trabajadores" style=""
             >
                 Ver registros
-                <i class="material-icons text-white center">view_list</i>
+                <i class="material-icons text-white center btn p-2 text-center">view_list</i>
             </a>
         </div>
     </div>
@@ -53,11 +62,11 @@
             <p class="textHeight">Aquí puedes añadir la 
             <br>información básica del trabajador nuevo, así como los datos biométricos... 
             </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(244, 161, 37)"
-                href="/trabajadores/add" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(244, 161, 37);border-radius: 20px;"
+                href="/trabajadores/add" style=""
             >
                 Añadir
-                <i class="material-icons text-white rounded-circlet">add</i>
+                <i class="material-icons text-white rounded-circlet btn p-2 text-center ">add</i>
             </a>
         </div>
     </div>
@@ -69,11 +78,11 @@
                 <b>Buscar Trabajador</b>
            </h5>
             <p class="textHeight">Aquí puedes buscar un trabajador y ver su información.</p>
-            <a class="waves-effect waves-light text-white btn  p-2 text-center  " style ="background:rgb(244, 161, 37)"
-                href="/trabajadores/search-trabajadores" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn  p-2 text-center  " style ="background:rgb(244, 161, 37);border-radius: 20px;"
+                href="/trabajadores/search-trabajadores" style=""
             >
                 Buscar
-                <i class="material-icons  text-white large rounded-circle">person_search
+                <i class="material-icons  text-white large rounded-circle btn p-2 text-center ">person_search
                 </i>                    
             </a>
         </div>
@@ -85,13 +94,12 @@
                 <b>Generar informe de trabajadores</b>
             </h5>
             <p class="textHeight">Aquí puedes generar un informe con la información publica de los trabajadores </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center"style ="background:rgb(244, 161, 37)"
-                    href="#" style="border-radius: 20px;"  
+            <a class="waves-effect waves-light text-white btn p-2 text-center"style ="background:rgb(244, 161, 37);border-radius: 20px;"
+                    href="#" style=""  
                 >
                     Informe
                     <!--<i class="material-icons  text-white large rounded-circle">demography</i>-->
-                    
-                    <span class="material-symbols-sharp">
+                    <span class="material-symbols-sharp text-white  btn p-2 text-center ">
                     demography
                     </span>
             </a>
