--- a/Interfaz/Administrador/src/views/administradores/administradores.hbs
+++ b/Interfaz/Administrador/src/views/administradores/administradores.hbs
@@ -36,6 +36,16 @@
       <br />
       <br />
       <br />
+      <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
   <div class="container p-5">
         <h3 style="font-family: 'Franklin Gothic Medium'">Administradores registrados</h3>
   <div class="row" style=" border: 0.5px solid rgb(80, 17, 170); margin: 25px 0px; background:rgb(185, 148, 243)">
