--- a/Interfaz/Administrador/src/views/administradores/perfil.hbs
+++ b/Interfaz/Administrador/src/views/administradores/perfil.hbs
@@ -66,7 +66,7 @@
  
   {{#each admin }}
   
-  <div class="col">
+  <div class="col-md-3">
     <br>
     <div class="card">
       <div class="card-body ">
