--- a/Interfaz/Administrador/src/views/inquilinos/edit-inquilino.hbs
+++ b/Interfaz/Administrador/src/views/inquilinos/edit-inquilino.hbs
@@ -37,7 +37,16 @@
       <br />
       <br />
       <br />
-    <!-- <div class="col-md-4 offset-md-4">-->
+      <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
     <br />
 
 {{#each errors}}
@@ -105,6 +114,7 @@
             class="form-control"
           >{{inquilino.correo}}</textarea>
         </div>
+        
         <button class="btn btn-danger w-100" type="submit">
           Guardar
         </button>
