--- a/Interfaz/Administrador/src/views/trabajadores/new-trabajador.hbs
+++ b/Interfaz/Administrador/src/views/trabajadores/new-trabajador.hbs
@@ -33,6 +33,17 @@
       <br />
       <br />
       <br />
+      <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
+
 <div class="col-md-4 mx-auto">
   <div class="card">
     <div class="card-header bg-info text-center" style="--bs-bg-opacity: .7;">
@@ -96,7 +107,36 @@
             placeholder="Calle.Jesus Manuel No.17, Col.Luis Cordoba, Municipio/Delegación"
           ></textarea>
         </div>
-        
+        <h4 class="text-dark">Datos Biométricos</h4>
+          <div class="row text-center">
+            <div class="col-4">
+              <label for="confirm_password"> Foto 📷:</label>
+              <a class="waves-effect waves-light text-dark btn p-2 text-center" style="" 
+                   href="#" style="border-radius: 30px;"
+                >
+                <i class="material-icons small rounded-circle " style="font-size:100px;"> 📷 
+                </i> <!--photo_camera-->
+              </a>
+            </div>
+            <div class="col-4">
+              <label for="confirm_password">Huella:</label>
+              <a class="waves-effect waves-light text-dark btn p-2 text-center" style="" 
+                   href="#" style="border-radius: 30px;"
+                >
+                <i class="material-icons small rounded-circle " style="font-size:100px;">fingerprint
+                </i>
+              </a>
+            </div>
+            <div class="col-4">
+              <label for="confirm_password">Voz:</label>
+              <a class="waves-effect waves-light text-dark btn p-2 text-center" style="" 
+                   href="#" style="border-radius: 30px;"
+                >
+                <i class="material-icons small rounded-circle " style="font-size:100px;">mic
+                </i>
+              </a>
+            </div>     
+          </div>
         
         <button class="btn btn-info w-100" type="submit">
            Guardar 
