--- a/Interfaz/Administrador/src/views/visitantes/all-visitantes.hbs
+++ b/Interfaz/Administrador/src/views/visitantes/all-visitantes.hbs
@@ -36,6 +36,17 @@
       <br />
       <br />
       <br />
+      <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
+      
   <div class="container p-5">
     <h3 style="font-family: 'Franklin Gothic Medium'">Visitantes registrados</h3>
     <div class="row justify-content-end">
@@ -70,10 +81,12 @@
             <p>Nombre de Inquilino: {{ nombreInquilino }} </p>
             <p>Parentesco: {{ parentesco }} </p>
             <!-- DELETE REQUEST -->
-            <form action="/visitantes/delete/{{_id}}?_method=DELETE" method="POST">
+            <form action="/visitantes/delete/{{_id}}?_method=DELETE" method="POST" class="btn">
               <input type="hidden" name="_method" value="DELETE">
-              <button type="submit" class="btn btn-danger btn-block btn-sm">
-                <span class="material-icons me-1">delete</span>Eliminar</button>
+              <button type="submit" class="btn btn-danger btn-block text-center ">
+                <span class="material-icons me-1 ">delete</span>
+                Eliminar
+              </button>
             </form>
           </div>
         </div>
