--- a/Interfaz/Administrador/src/views/visitantes/search-visitantes.hbs
+++ b/Interfaz/Administrador/src/views/visitantes/search-visitantes.hbs
@@ -36,14 +36,27 @@
       <br />
       <br />
       <br />
+      <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " 
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
   <div class="container p-5">
-    <div class="row justify-content-end" >
+    <div class="row justify-content-center" >
       <div class="col-6 align-self-center" >
          <div class="container-fluid text-left bg-info p-2" style="--bs-bg-opacity: .5;">
           <form class="d-flex " action="/visitantes/search-visitantes" method="GET" >
-            <input class="form-control " 
-              type="text" name="buscar" placeholder="Search" aria-label="Search">
-            <!--input type="submit" value="Buscar" -->
+            <input class="form-control " style=" border: 0.5px solid rgb(61, 101, 213);" 
+              type="text" name="buscar" placeholder="Nombre" aria-label="Search">
+            
+            <input class="form-control " style=" border: 0.5px solid rgb(61, 101, 213);" 
+              type="text" name="nombreInquilino" placeholder="Nombre del Inquilino" aria-label="Search">
+          
             <button class="btn btn-success" type="submit">
               <span class="material-symbols-rounded">
                 search
@@ -79,10 +92,11 @@
         <p>No. Departamento: {{ departamento }} </p>
         <p>No. Teléfono: {{ telefono }} </p>
         <p>Correo: {{ correo }} </p>
+        <p>Nombre del Inquilino: {{ nombreInquilino }} </p>
         <!-- DELETE REQUEST -->
-        <form action="/visitantes/delete/{{_id}}?_method=DELETE" method="POST">
+        <form action="/visitantes/delete/{{_id}}?_method=DELETE" method="POST" class="btn">
           <input type="hidden" name="_method" value="DELETE">
-          <button type="submit" class="btn btn-danger btn-block btn-sm ">
+          <button type="submit" class="btn btn-danger btn-block ">
             <span class="material-icons me-1">delete</span>
             Eliminar
             </button>
