--- a/Interfaz/Administrador/src/views/visitantes/visitantes_inicial.hbs
+++ b/Interfaz/Administrador/src/views/visitantes/visitantes_inicial.hbs
@@ -26,6 +26,16 @@
             <img class="d-block w-100" src="/img/upiita-logo.png" alt="First slide" height="200px" width="150px" >
         </div>    
     </div>
+    <div class="row justify-content-end">
+        <div class="col-3 align-self-end">
+          <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background: rgb(29, 240, 134);border-radius: 20px;"
+                    href="javascript:window.history.back(); " style=""
+                > 
+            <i class="material-icons  text-white large rounded-circle btn p-2 text-center">arrow_back
+            </i>       Regresar              
+          </a>
+        </div>
+      </div>
 <div class="row" style=" border: 0.0px solid rgb(220, 220, 200); margin: 50px 0px;" > 
     <div class="col s12 m6 l6 xl6">
         <div class="MenuActionContainer text-center p-2 " style="background:rgba(229, 87, 134, 0.941)">
@@ -34,11 +44,11 @@
                 <b>Visitantes</b>
             </h5>
             <p class="textHeight">Aquí puedes consultar el historial de todos los registros de visitantes, agregar nuevos y darle seguimiento...</p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(167, 21, 94);" 
-                href="/visitantes/" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style="background:rgb(167, 21, 94);border-radius: 20px;" 
+                href="/visitantes/" style=""
             >
                 Ver registros
-                <i class="material-icons text-white center">view_list</i>
+                <i class="material-icons text-white center btn p-2 text-center">view_list</i>
             </a>
         </div>
     </div>
@@ -51,11 +61,11 @@
             <p class="textHeight">Aquí puedes añadir la 
             <br>información básica del visitante nuevo, así como los datos biométricos... 
             </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(167, 21, 94)"
-                href="/visitantes/add" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center " style ="background:rgb(167, 21, 94);border-radius: 20px;"
+                href="/visitantes/add" 
             >
                 Añadir
-                <i class="material-icons text-white rounded-circlet">add</i>
+                <i class="material-icons text-white rounded-circlet btn p-2 text-center">add</i>
             </a>
         </div>
     </div>
@@ -66,11 +76,11 @@
                 <b>Buscar Visitante</b>
            </h5>
             <p class="textHeight">Aquí puedes buscar un visitante y ver su información.</p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(167, 21, 94) "
-                href="/visitantes/search-visitantes" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(167, 21, 94);border-radius: 20px; "
+                href="/visitantes/search-visitantes" 
             >
                 Buscar
-                <i class="material-icons  text-white large rounded-circle">person_search
+                <i class="material-icons  text-white large rounded-circle btn p-2 text-center">person_search
                 </i>                    
             </a>
         </div>
@@ -82,13 +92,13 @@
                 <b>Generar informe de visitantes</b>
             </h5>
             <p class="textHeight">Aquí puedes generar un informe con la información publica de los visitantes </p>
-            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(167, 21, 94);"
-                    href="#" style="border-radius: 20px;"
+            <a class="waves-effect waves-light text-white btn p-2 text-center  " style="background:rgb(167, 21, 94);border-radius: 20px;"
+                    href="#" 
                 >
                     Informe
                     <!--<i class="material-icons  text-white large rounded-circle">demography</i>-->
                     
-                    <span class="material-symbols-sharp">
+                    <span class="material-symbols-sharp text-white btn p-2 text-center">
                     demography
                     </span>
             </a>
