--- a/Interfaz/Administrador/src/views/index.hbs
+++ b/Interfaz/Administrador/src/views/index.hbs
@@ -54,6 +54,12 @@
             
     </div>
 
+    <form action="/" method="POST" enctype="multipart/form-data">
+            <input type="file" name="myImage" accept="image/*">
+            <br>
+            <input type="submit" value="Upload" style="background:rgb(5, 146, 217); border: 5px solid rgb(37, 79, 247); margin: 30px 0px;">
+    </form>
+
     <img src="/img/ellipse1.png" alt="" 
         style="position: absolute; width: 1616px; height: 1148px; left: 100px; bottom: -900px; z-index: -1;"
     >
