Ultima actualizacion de usuario

--- a/Interfaz/Usuarios/usuario/src/views/accediste.hbs
+++ b/Interfaz/Usuarios/usuario/src/views/accediste.hbs
@@ -22,7 +22,7 @@
             <blockquote>
               <h4 class="subtitulo black-text" style="font-size:40px">
                 <b>
-                  Ya ACCEDISTE <br /> AL EDIFICIO.
+                  ACCEso concedido <br /> AL EDIFICIO.
                 </b>
               </h4>
             </blockquote>
