--- a/Interfaz/Usuarios/usuario/src/views/inquilinos/new-inquilino.hbs
+++ b/Interfaz/Usuarios/usuario/src/views/inquilinos/new-inquilino.hbs
@@ -113,7 +113,7 @@
             </div>
             <h4 class="text-dark">Datos Biométricos</h4>
             <div class="row text-center">
-             <div class="col-4">
+            <div class="col-4">
               <label for="confirm_password"> Foto:</label>
               <!-- Button trigger modal  -->
               <a class="waves-effect waves-light text-dark btn p-2 text-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
@@ -140,6 +140,7 @@
                                 
                                   Aqui se hace la captura de imágenes del rostro
                                   <br>
+                                  Acercate a la cámara
                                 <div class="input-group" >
                                     <input type="file" name="rostro" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload"
                                       style="background: rgb(141, 185, 232);"
