--- a/Interfaz/Usuarios/usuario/src/views/ingresar.hbs
+++ b/Interfaz/Usuarios/usuario/src/views/ingresar.hbs
@@ -88,7 +88,7 @@
                     </p>
                 </div>
                
-            <!--div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                 <div class="modal-content text-dark">
                   <div class="modal-header bg-success" style="--bs-bg-opacity: .5;">
@@ -119,7 +119,7 @@
                   </div>
                 </div>
               </div>
-            </div-->
+            </div>
 
                 <div class="col s6 align-self-center">
                   <p align='center'>
